@@ -1,7 +1,7 @@
 package com.example.ewaste.Utils;
-import io.github.cdimascio.dotenv.Dotenv;
-import org.json.JSONArray;
-import org.json.JSONObject;
+
+import com.example.ewaste.Utils.SimpleJsonParser.JSONArray;
+import com.example.ewaste.Utils.SimpleJsonParser.JSONObject;
 
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
@@ -9,12 +9,8 @@ import java.io.OutputStream;
 import java.net.HttpURLConnection;
 import java.net.URL;
 public class QwenApiClient {
-    static Dotenv dotenv = Dotenv.configure()
-            .directory("C:/Users/User/Documents/e-waste/e-waste") // Adjust the path accordingly
-            .filename(".env")
-            .load();
-    // Replace with your actual API key
-    private static final String API_KEY = dotenv.get("QWEN_API_KEY");
+    // Get API key from DotenvConfig
+    private static final String API_KEY = DotenvConfig.get("QWEN_API_KEY", "dummy-qwen-api-key");
     private static final String API_URL = "https://openrouter.ai/api/v1/chat/completions";
 
     /**
@@ -28,7 +24,7 @@ public class QwenApiClient {
     public static String generateTextFromImage(String promptText, String imageUrl) {
         try {
             // Setup connection
-            URL url = new URL(API_URL);
+            URL url = new java.net.URI(API_URL).toURL();
             HttpURLConnection con = (HttpURLConnection) url.openConnection();
             con.setRequestMethod("POST");
             con.setRequestProperty("Authorization", "Bearer " + API_KEY);
